# rcss-preprocessor

./: Cargo.toml  README.md  demo.css  demo.rcss  import.rcss  package.json  tailwind-theme-resolved.json
crates/rcss-cli/: Cargo.toml
crates/rcss-core/: Cargo.toml
theme/: README.md  presets.json  shorthands.json  tokens.json
theme/tokens/: border-radius.json  box-shadow.json  colors.json  font-size.json  grid.json  line-height.json  opacity.json  ring-offset-color.json  ring-offset-width.json  ring-opacity.json  screens.json  spacing.json  tokens.json
tree-sitter-rcss/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-rcss/.emcache/: sanity.txt
tree-sitter-rcss/.emcache/sysroot/include/emscripten/: version.h
tree-sitter-rcss/bindings/c/: tree-sitter-rcss.pc.in
tree-sitter-rcss/bindings/c/tree_sitter/: tree-sitter-rcss.h
tree-sitter-rcss/bindings/go/: binding.go  binding_test.go
tree-sitter-rcss/bindings/node/: binding.cc  index.js
tree-sitter-rcss/bindings/python/tests/: test_binding.py
tree-sitter-rcss/bindings/python/tree_sitter_rcss/: __init__.py  binding.c
tree-sitter-rcss/bindings/rust/: build.rs  lib.rs
tree-sitter-rcss/bindings/swift/TreeSitterRcssTests/: TreeSitterRcssTests.swift
tree-sitter-rcss/queries/: highlights.scm
tree-sitter-rcss/src/: grammar.json  node-types.json  parser.c
vscode-rcss/: README.md  extension.js  language-configuration.json  package.json  rcss-syntax-0.0.1.vsix  rcss-syntax-0.0.2.vsix  rcss-syntax-0.0.3.vsix  rcss-syntax-0.0.4.vsix  rcss-syntax-0.0.6.vsix  rcss-syntax-0.0.8.vsix
(+19 files in other folders)
