[package]
name = "tree-sitter-rcss"
description = "A Tree-sitter grammar for the RCSS stylesheet language."
version = "0.1.0"
authors = ["Nathan King <hello@nathanking.io>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rcss"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/nathan-king/rcss-preprocessor"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
